kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: netdebug-app
  name: netdebug-app
  namespace: netdebug
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netdebug-app
  strategy: {}
  template:
    metadata:
      labels:
        app: netdebug-app
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        resources: {}
status: {}
