kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netdebug-service
  name: netdebug-service
  namespace: netdebug
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: netdebug-app
  type: ClusterIP
status:
  loadBalancer: {}
